# k-means-classic

./: .gitignore  CMakeLists.txt  README.md  kmeans.cpp
cpp/: distance_reader.cpp  kmeans_d.cpp  kmeans_s.cpp  par.cpp  util.cpp
include/: distance_reader.h  kmeans_d.h  kmeans_s.h  par.h  util.h
